Fix touch ratings in list on mobile

--- a/static/style5/_detail.scss
+++ b/static/style5/_detail.scss
@@ -126,7 +126,6 @@ div.row {
 	padding: 2px 10px 2px 10px;
 	clear: both;
 	border-bottom: solid 1px transparent;
-	overflow: hidden;
 	word-break: break-all;
 	white-space: nowrap;
 	min-height: 20px;
